tests-integration/tests/roundtrip/invalid/input-legacy.expected-error.txt
Error running `conjure pretty`: Error: tests/roundtrip/invalid/input.essence:1:1:
  |
1 | fid x : int(1..3)
  | ^^^^^^^^^^^^^^^^^
Skipped tokens

